# servicio-tecnico-app

./: LICENSE  index.html  package.json  pnpm-lock.yaml
src/: Routes.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Loader.tsx
src/pages/: Dashboard.tsx  Layout.tsx  NewOrder.tsx  OrderToPrint.tsx  Orders.tsx
src/utils/: helpers.ts  store.ts  types.ts
