[package]
name = "Taller"
version = "1.0.0"
description = "Taller App"
authors = ["gixi"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "taller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
